refact(Discover): refactor handling of backend for discover movies
